<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainCoursesDisplay" >
    
    <TextView
        android:id="@+id/maindisplay_addcourse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/large_text"
        android:hint="@string/add_course"
        />
    
    <LinearLayout
        android:id="@+id/maindisplay_addcourselayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
		<EditText
		    android:id="@+id/maindisplay_addcourselayout_namefield"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"
		    android:digits="0,1,2,3,4,5,6,7,8,9, ,-,.,$,#,@,!,(,),+,=,\,,abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
		    android:hint="@string/name"
		    />
		
		<EditText
		    android:id="@+id/maindisplay_addcourselayout_codefield"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"
		    android:digits="0,1,2,3,4,5,6,7,8,9, ,-,.,$,#,@,!,(,),+,=,\,,abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
		    android:hint="@string/code"
		    />
		
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    >
		    
		    <CheckBox
		        android:id="@+id/maindisplay_addcourselayout_halfyearbox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/half_year"
		        />
		    
		    <CheckBox
		        android:id="@+id/maindisplay_addcourselayout_fullyearbox"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/full_year"
		        />
		    
		</LinearLayout>
		
		<TextView
		    android:id="@+id/maindisplay_addcourselayout_emptyfield"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/fill_fields"
		    android:textColor="@color/red"
		    />
		
		<TextView
		    android:id="@+id/maindisplay_addcourselayout_checkboxerror"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/error_pick_one"
		    android:textColor="@color/red"
		    />
		
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:paddingTop="@dimen/button_padding"
		    >
		    
		    <TextView
		        android:id="@+id/maindisplay_savecourse"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:hint="@string/save"
		        />
		    
		    <TextView
		        android:id="@+id/maindisplay_canceladdcourse"
		        android:layout_width="0dp"
		        android:layout_height="wrap_content"
		        android:layout_weight="1"
		        android:gravity="center"
		        android:hint="@string/cancel"
		        />
		    
		</LinearLayout>
        
    </LinearLayout>
    
    <ListView 
        android:id="@+id/maindisplay_courselist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/layout_padding"
        >        
    </ListView>

</LinearLayout>
