<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserGradesDisplay"
    >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
        <LinearLayout
            android:id="@+id/usergradedisplay_cgpalayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/layout_padding"
            android:orientation="horizontal"
            >
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cumulative_gpa"
                android:textAllCaps="true"
                android:textColor="@color/dark_grey"
                />
        
	        <TextView
	            android:id="@+id/usergradesdisplay_cgpa"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:paddingLeft="@dimen/text_indent"
	            android:textSize="@dimen/medium_text"
	            />
        
        </LinearLayout>
        
        <TextView
            android:id="@+id/usergradesdisplay_nomarks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/layout_padding"
            android:text="@string/no_marks"
            android:textAllCaps="true"
            android:textColor="@color/dark_grey"
            />
        
        <LinearLayout
            android:id="@+id/usergradesdisplay_coursemarkslayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
        
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/course_marks"
	            android:textStyle="bold"
	            android:textAllCaps="true"
	            />
	        
	        <View
	            android:layout_width="match_parent"
	            android:layout_height="1dp"
	            android:background="@color/dark_grey"
	            android:paddingBottom="@dimen/under_title_spacing"
	            />
        
	        <LinearLayout
	            android:id="@+id/usergradesdisplay_coursemarks"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            >
            
            </LinearLayout>
            
        </LinearLayout>
        
    </LinearLayout>

</ScrollView>
