<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/listitemcourseandgrade_course"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_text" />

    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textAllCaps="true"
                android:textColor="@color/darkish_grey" />

            <TextView
                android:id="@+id/listitemcourseandgrade_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingLeft="@dimen/text_indent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mark"
                android:textAllCaps="true"
                android:textColor="@color/darkish_grey" />

            <TextView
                android:id="@+id/listitemcourseandgrade_mark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingLeft="@dimen/text_indent" />
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gpv"
                android:textAllCaps="true"
                android:textColor="@color/darkish_grey" />

            <TextView
                android:id="@+id/listitemcourseandgrade_gpv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:paddingLeft="@dimen/text_indent" />
        </LinearLayout>
        
    </LinearLayout>
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_padding" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey" />
    
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_padding" />

</LinearLayout>